--- a/src/main/resources/fxml/taskListCard.fxml
+++ b/src/main/resources/fxml/taskListCard.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<HBox prefHeight="74.0" prefWidth="536.0" spacing="10.0" stylesheets="@../styles/modules.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<HBox prefHeight="74.0" prefWidth="536.0" spacing="10.0" stylesheets="@../styles/modules.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.o4codes.controllers.TaskListCardController">
    <children>
       <VBox prefHeight="66.0" prefWidth="229.0" spacing="5.0" HBox.hgrow="ALWAYS">
          <HBox.margin>
